--- a/theme/style.css
+++ b/theme/style.css
@@ -32,6 +32,7 @@ Underscores and Varia are distributed under the terms of the GNU GPL v2 or later
   --text-3xl: 1.875rem;
   --text-3xl--line-height: calc(2.25 / 1.875);
   --font-weight-extrabold: 800;
+  --radius-sm: 0.25rem;
   --radius-md: 0.375rem;
   --radius-2xl: 1rem;
   --default-font-family: var(--font-sans);
@@ -60,6 +61,7 @@ Underscores and Varia are distributed under the terms of the GNU GPL v2 or later
   --spacing-l: clamp(1.25rem, 0.8152rem + 2.1739vw, 2.5rem);
   --spacing-xl: clamp(1.875rem, 1.2228rem + 3.2609vw, 3.75rem);
   --spacing-2xl: clamp(2.5rem, 1.6304rem + 4.3478vw, 5rem);
+  --spacing-3xl: clamp(3.75rem, 2.4457rem + 6.5217vw, 7.5rem);
   --spacing-s-m: clamp(0.625rem, 0.1902rem + 2.1739vw, 1.875rem);
   --spacing-m-l: clamp(0.9375rem, 0.394rem + 2.7174vw, 2.5rem);
   --spacing-xl-2xl: clamp(1.875rem, 0.788rem + 5.4348vw, 5rem);
@@ -370,6 +372,9 @@ main:focus {
   width: 100vw;
   height: auto;
 }
+.faq {
+  min-width: var(--faq-min-width, 45ch);
+}
 footer {
   position: sticky;
   bottom: 0;
@@ -416,7 +421,7 @@ footer {
   color: currentColor;
 }
 .nav a:hover {
-  color: var(--wp--preset--color--tertiary);
+  color: var(--wp--preset--color--secondary);
 }
 .burger-menu__trigger {
   display: none;
@@ -451,7 +456,7 @@ footer {
   width: 2rem;
   height: 2rem;
   position: relative;
-  z-index: 2;
+  z-index: 3;
   background: transparent;
   border: none;
   cursor: pointer;
@@ -465,7 +470,7 @@ footer {
   height: 100%;
   visibility: hidden;
   opacity: 0;
-  z-index: 1;
+  z-index: 2;
   background: var(--wp--preset--color--tertiary);
   color: var(--wp--preset--color--background);
   overflow-y: auto;
@@ -1109,19 +1114,14 @@ footer {
 .gap-s {
   gap: var(--spacing-s);
 }
-.rounded {
-  border-radius: 0.25rem;
+.overflow-hidden {
+  overflow: hidden;
 }
 .rounded-2xl {
   border-radius: var(--radius-2xl);
 }
-.border {
-  border-style: var(--tw-border-style);
-  border-width: 1px;
-}
-.border-2 {
-  border-style: var(--tw-border-style);
-  border-width: 2px;
+.rounded-sm {
+  border-radius: var(--radius-sm);
 }
 .prose .wp-block-table td {
   border: 0;
@@ -1153,11 +1153,14 @@ footer {
 .bg-tertiary {
   background-color: var(--color-tertiary);
 }
-.p-s {
-  padding: var(--spacing-s);
+.p-m {
+  padding: var(--spacing-m);
 }
 .py-2xl {
   padding-block: var(--spacing-2xl);
+}
+.py-3xl {
+  padding-block: var(--spacing-3xl);
 }
 .py-l {
   padding-block: var(--spacing-l);
@@ -1182,6 +1185,9 @@ footer {
 }
 .text-center {
   text-align: center;
+}
+.text-left {
+  text-align: left;
 }
 .font-content {
   font-family: var(--font-content);
@@ -1277,11 +1283,6 @@ footer {
   }
 }
 @media (width >= 48rem) {
-  .md\:p-m {
-    padding: var(--spacing-m);
-  }
-}
-@media (width >= 48rem) {
   .md\:p-s {
     padding: var(--spacing-s);
   }
@@ -1318,11 +1319,6 @@ footer {
   syntax: "*";
   inherits: false;
 }
-@property --tw-border-style {
-  syntax: "*";
-  inherits: false;
-  initial-value: solid;
-}
 @property --tw-outline-style {
   syntax: "*";
   inherits: false;
@@ -1332,7 +1328,6 @@ footer {
   @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
     *, ::before, ::after, ::backdrop {
       --tw-font-weight: initial;
-      --tw-border-style: solid;
       --tw-outline-style: solid;
     }
   }
